[1.11-r2] Set daemon off in main config instead of from command line

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,7 @@ user nginx;
 worker_processes 1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
-# daemon is turned off from command line
-# daemon off;
+daemon off;
 
 include /etc/nginx/main.d/*.conf;
 
